--- a/debian.yml
+++ b/debian.yml
@@ -48,7 +48,7 @@
   tags: packages
 - name: Change local to FR
   community.general.locale_gen:
-    name: fr_FR.UTF-8
+    name: fr_CH.UTF-8
     state: present
   tags: local
 - name: install Azure cli
@@ -56,6 +56,6 @@
 - name: dpkg-reconfigure
   shell: |
     dpkg-reconfigure -f noninteractive keyboard-configuration && \
-    localectl set-locale LANG=fr_FR.UTF8 LANGUAGE=fr_FR.UTF8 && \
-    timedatectl set-timezone Europe/Paris && \
-    update-locale LANG=fr_FR.UTF-8
+    localectl set-locale LANG=fr_CH.UTF8 LANGUAGE=fr_CH.UTF8 && \
+    timedatectl set-timezone Europe/Zurich && \
+    update-locale LANG=fr_CH.UTF-8
